--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
       <div class="line">
         <div style="position: relative; top:-30px;left:47px;">
-          <span style="font-size:20px;">More</span>
+          <span style="font-size:20px;" class="more">More</span>
         </div>
       </div>
       <div class="footer">
