--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
           <img class="logo" src="./img/y.png" alt="logo" />
           <ul class="head-title">
             <li><a href="#" class="title">Hacker News</a></li>
-            <li class="head-select"><a href="#">news</a></li>
+            <li class="head-select news"><a href="#">news</a></li>
             <li class="head-select"><a href="#">past</a></li>
-            <li class="head-select"><a href="#">comments</a></li>
-            <li class="head-select"><a href="#">ask</a></li>
-            <li class="head-select"><a href="#">show</a></li>
-            <li class="head-select"><a href="#">jobs</a></li>
-            <li class="head-select"><a href="#">submit</a></li>
+            <li class="head-select"><a href="https://news.ycombinator.com/newcomments">comments</a></li>
+            <li class="head-select ask"><a href="#">ask</a></li>
+            <li class="head-select show"><a href="#">show</a></li>
+            <li class="head-select jobs"><a href="#">jobs</a></li>
+            <li class="head-select"><a href="https://news.ycombinator.com/submit">submit</a></li>
             <li
               style="float: right;padding-right: 10px;font-size: 20px; line-height: 4.5vh;"
             >
